projects/packages/my-jetpack/_inc/components/card/style.module.scss
.container {
	--actions-size: 28px;
	--status-size: 8px;

	padding: calc( var( --spacing-base ) * 3 ); // 24px
	background: var( --jp-white );
	border-radius: var( --jp-border-radius );
	box-shadow: 0 0 40px rgba(0, 0, 0, 0.08);
	height: 100%;
	display: flex;
	flex-direction: column;
	box-shadow:
		0 0 0 1px var( --jp-gray-10 ) inset,
		0px 0px 40px 0px rgba(0, 0, 0, 0.08);

	&.is-link {
		background: none;
		text-decoration: none;
		background-color: var( --jp-white-off );
		color: var( --jp-black-80 );

		&:focus {
			box-shadow: 0 0 0 1.5px var( --jp-black );
			background-color: var( --jp-white );
			outline: 3px solid transparent;
		}
	}

	&.has-error {
		box-shadow: 0 0 0 1.5px var( --jp-red-60 );
	}
}

.title {
	width: 100%;
	display: flex;
	gap: var(--spacing-base);
	align-items: center;
	justify-content: space-between;
	margin-bottom: calc( var(--spacing-base) * 3 ); // 24px
}

.name {
	display: flex;
	height: 100%;
	gap: var(--spacing-base);
	align-items: center;
	flex-wrap: wrap-reverse;
}

